--- a/study-region/app/sass/global/base.scss
+++ b/study-region/app/sass/global/base.scss
@@ -12,7 +12,7 @@ body {
                     url('../img/svg/polygon-yellow.svg'),
                     url('../img/svg/polygon-green.svg');
   background-repeat: no-repeat;
-  background-position: 100% -50%, 0 420px, 100% 1900px, 0 3300px;
+  background-position: 100% -700px, 0 420px, 100% 1900px, 0 3240px;
 }
 
 .container {
