--- a/study-summer/usa/app/sass/blocks/about.scss
+++ b/study-summer/usa/app/sass/blocks/about.scss
@@ -1,7 +1,11 @@
 .about {
+  margin-bottom: 70px;
+}
+
+.about__wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 70px;
+  margin-bottom: 30px;
 }
 
 .about__text {
