--- a/study-summer/canada/app/sass/blocks/add.scss
+++ b/study-summer/canada/app/sass/blocks/add.scss
@@ -43,7 +43,7 @@
   top: 50%;
   left: 50%;
   box-sizing: border-box;
-  width: 770px;
+  width: 765px;
   padding-top: 25px;
   padding-right: 40px;
   padding-bottom: 30px;
@@ -181,5 +181,19 @@
   &:active {
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
     background-color: darken(#EF6C57, 5%);
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .add {
+    top: 10px;
+    width: 95%;
+    padding-right: 20px;
+    padding-left: 20px;
+    transform: translate(-50%, 0%)
+  }
+  
+  .add__desc {
+    font-size: 20px;
   }
 }
