--- a/study-summer/canada/app/sass/blocks/add.scss
+++ b/study-summer/canada/app/sass/blocks/add.scss
@@ -185,7 +185,22 @@
 }
 
 @media screen and ($mobile-widths) {
+  .add__wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 95%;
+    overflow-y: scroll;
+    z-index: 6;
+    
+    &::-webkit-scrollbar {
+      width: 0;
+    }
+  }
+  
   .add {
+    position: absolute;
     top: 10px;
     width: 95%;
     padding-right: 20px;
