--- a/study-summer/europe/app/sass/blocks/request.scss
+++ b/study-summer/europe/app/sass/blocks/request.scss
@@ -9,11 +9,9 @@
 }
 
 .request__column {
-  // width: 770px;
   width: 560px;
   margin-right: 30px;
   margin-left: auto;
-  // padding-left: 15px;
 }
 
 .request__title {
@@ -41,93 +39,114 @@
   text-decoration: none;
 }
 
-// .request__form {
-//   display: flex;
-//   flex-direction: column;
-//   width: 100%;
-// }
-// 
-// .request__group {
-//   position: relative;
-//   width: 100%;
-//   margin-right: 15px;
-// }
-// 
-// .request__row {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   margin-bottom: 35px;
-// }
-// 
-// .request__label {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   color: $text;
-//   font-size: 16px;
-//   font-weight: normal;
-//   cursor: pointer;
-//   transition: 0.3s;
-// 
-//   &--active {
-//     top: -15px;
-//     color: #6a7efc;
-//     font-size: 12px;  
-//   }
-// }
-// 
-// .request__input {
-//   box-sizing: border-box;
-//   width: 100%;
-//   padding-bottom: 8px;
-//   color: rgba(41, 47, 72, 0.5);
-//   font-size: 16px;
-//   font-weight: normal;
-//   font-family: inherit;
-//   border: none;
-//   border-bottom: 1px solid $text;
-//   cursor: pointer;
-//   outline: none;
-//   transition: 0.3s;
-// 
-//   &--text {
-//     height: 31px;
-//     resize: none;
-//   }
-// 
-//   &:hover,
-//   &:focus {
-//     border-bottom: 1px solid $blue;
-// 
-//     + .request__label {
-//       color: $blue;
-//     }
-//   }
-// }
-// 
-// .request__submit {
-//   align-self: center;
-//   padding-top: 10px;
-//   padding-right: 30px;
-//   padding-bottom: 10px;
-//   padding-left: 30px;
-//   color: #fff;
-//   font-size: 18px;
-//   font-weight: normal;
-//   font-family: inherit;
-//   border: none;
-//   border-radius: 40px;
-//   background-color: $blue;
-//   cursor: pointer;
-//   outline: none;
-//   transition: 0.3s;
-// 
-//   &:hover,
-//   &:focus {
-//     box-shadow: 0 0 10px 2px darken($blue, 20%);
-//   }
-// }
+.request__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.request__group {
+  position: relative;
+  width: 100%;
+  margin-right: 15px;
+}
+
+.request__row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 35px;
+}
+
+.request__label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: $text;
+  font-size: 16px;
+  font-weight: normal;
+  cursor: pointer;
+  transition: 0.3s;
+
+  &--active {
+    top: -15px;
+    color: #6a7efc;
+    font-size: 12px;  
+  }
+}
+
+.request__input {
+  box-sizing: border-box;
+  width: 100%;
+  padding-bottom: 8px;
+  color: rgba(41, 47, 72, 0.5);
+  font-size: 16px;
+  font-weight: normal;
+  font-family: inherit;
+  border: none;
+  border-bottom: 1px solid $text;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+
+  &--text {
+    height: 31px;
+    resize: none;
+  }
+
+  &:hover,
+  &:focus {
+    border-bottom: 1px solid $blue;
+
+    + .request__label {
+      color: $blue;
+    }
+  }
+  
+  &:focus {
+    
+    + .request__label {
+      top: -15px;
+      color: #6a7efc;
+      font-size: 12px; 
+    }
+  }
+  
+  &--invalid {
+    border-bottom: 1px solid $red !important;
+    
+    + .request__label {
+      color: $red !important;
+    }
+  }
+  
+  &--valid {
+    border-bottom: 1px solid $blue !important;
+  }
+}
+
+.request__submit {
+  align-self: center;
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: normal;
+  font-family: inherit;
+  border: none;
+  border-radius: 40px;
+  background-color: $blue;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 10px 2px darken($blue, 20%);
+  }
+}
 
 .request__decorate {
   width: 50%;
