--- a/study-ai/app/sass/blocks/footer.scss
+++ b/study-ai/app/sass/blocks/footer.scss
@@ -36,3 +36,22 @@
   font-size: 14px;
   font-weight: 400;
 }
+
+@media screen and ($mobile-widths) {
+  .footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .footer__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  
+  .footer__phone {
+    margin-left: 0;
+  }
+}
