--- a/study-ai/app/sass/blocks/contacts.scss
+++ b/study-ai/app/sass/blocks/contacts.scss
@@ -49,6 +49,11 @@
   }
 }
 
+.contacts__map {
+  width: 50%;
+  border: none;
+}
+
 @media screen and ($mobile-widths) {
   .contacts__title {
     font-size: 24px;
@@ -60,6 +65,7 @@
   
   .contact__column {
     width: auto;
+    margin-bottom: 20px;
   }
   
   .contacts__flex {
@@ -73,5 +79,10 @@
     &:last-child {
       margin-bottom: 0;
     }
+  }
+  
+  .contacts__map {
+    width: 100%;
+    height: 300px;
   }
 }
