--- a/study-summer/home/app/sass/blocks/nav.scss
+++ b/study-summer/home/app/sass/blocks/nav.scss
@@ -27,27 +27,27 @@
   transition: 0.2s;
   
   &--canada {
-    background-image: url(../img/svg/nav-canada.svg);
+    background-image: url('../img/svg/nav-canada.svg');
   }
   
   &--usa {
-    background-image: url(../img/svg/nav-usa.svg);
+    background-image: url('../img/svg/nav-usa.svg');
   }
   
   &--uk {
-    background-image: url(../img/svg/nav-uk.svg);
+    background-image: url('../img/svg/nav-uk.svg');
   }
   
   &--ireland {
-    background-image: url(../img/svg/nav-ireland.svg);
+    background-image: url('../img/svg/nav-ireland.svg');
   }
   
   &--europe {
-    background-image: url(../img/svg/nav-europe.svg);
+    background-image: url('../img/svg/nav-europe.svg');
   }
   
   &--students {
-    background-image: url(../img/svg/nav-students.svg);
+    background-image: url('../img/svg/nav-students.svg');
     
     &::before {
       display: none;
@@ -62,17 +62,19 @@
     width: 2px;
     height: 33px;
     background-color: #FFFFFF;
-    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
   }
   
-  &[aria-label]::after {
+  &::after {
     content: attr(aria-label);
     position: absolute;
     top: 0;
     right: 20%;
-    padding: 7.1px 25px 7.1px 10px;
-    color: #292f48;
+    padding-top: 7.1px;
+    padding-right: 25px;
+    padding-bottom: 7.1px;
+    padding-left: 10px;
+    color: $text;
     font-size: 14px;
     font-weight: 400;
     font-family: 'Gotham Pro', 'Arial', sans-serif;
@@ -85,10 +87,13 @@
     z-index: -1;
   }
   
-  &:hover[aria-label]::after,
-  &:focus[aria-label]::after {
-    right: 50%;
-    opacity: 1;
-    visibility: visible;
+  &:hover,
+  &:focus {
+    
+    &::after {
+      right: 50%;
+      opacity: 1;
+      visibility: visible;
+    }
   }
 }
