--- a/study-summer/home/app/sass/global/base.scss
+++ b/study-summer/home/app/sass/global/base.scss
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font-family: 'Gotham Pro', 'Arial', sans-serif;
   background-color: $blue;
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
