--- a/study-summer/home/app/sass/style.scss
+++ b/study-summer/home/app/sass/style.scss
@@ -10,3 +10,8 @@
 @import 'blocks/canada';
 @import 'blocks/usa';
 @import 'blocks/uk';
+@import 'blocks/ireland';
+@import 'blocks/europe';
+@import 'blocks/students';
+@import 'blocks/edge';
+@import 'blocks/contacts';
