--- a/study-summer/home/app/sass/blocks/europe.scss
+++ b/study-summer/home/app/sass/blocks/europe.scss
@@ -1,27 +1,27 @@
-.canada {
+.europe {
   display: flex;
   height: 100vh;
 }
 
-.canada__column {
+.europe__column {
   display: flex;
   flex-direction: column;
   width: 50%;
   
   &--left {
-    background-image: url('../img/canada-left-bg.jpg');
+    background-image: url('../img/europe-left-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 }
 
-.canada__row {
+.europe__row {
   flex-grow: 1;
   
   &--top {
     position: relative;
-    background-image: url('../img/canada-row-top-bg.jpg');
+    background-image: url('../img/europe-row-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -45,7 +45,7 @@
   }
 }
 
-.canada__content {
+.europe__content {
   position: relative;
   box-sizing: border-box;
   padding-top: 50px;
@@ -55,13 +55,16 @@
   background-color: #FFFFFF;
 }
 
-.canada__subtitle {
+.europe__subtitle {
   position: absolute;
   top: -30px;
   left: 50%;
   width: 375px;
   margin: 0;
-  padding: 10px 30px;
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 30px;
   color: $blue;
   font-size: 25px;
   font-weight: 400;
@@ -77,7 +80,7 @@
   }
 }
 
-.canada__title {
+.europe__title {
   margin-top: 0;
   margin-bottom: 30px;
   color: $text;
@@ -85,21 +88,25 @@
   font-weight: 900;
 }
 
-.canada__list {
+.europe__list {
   margin-top: 0;
   margin-bottom: 30px;
   padding-left: 15px;
   list-style-image: url('../img/svg/li.svg');
 }
 
-.canada__item {
+.europe__item {
   margin-bottom: 15px;
   color: $text;
   font-size: 18px;
   font-weight: 400;
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
-.canada__link {
+.europe__link {
   padding-right: 45px;
   color: $red;
   font-size: 16px;
@@ -117,10 +124,10 @@
   }
 }
 
-.canada__video {
+.europe__video {
   position: relative;
   width: 50%;
-  background-image: url('../img/canada-video-bg.jpg');
+  background-image: url('../img/europe-video-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -141,7 +148,7 @@
   }
 }
 
-.canada__play {
+.europe__play {
   position: absolute;
   top: 0;
   left: 0;
@@ -163,10 +170,10 @@
   }
 }
 
-.canada__photo {
+.europe__photo {
   position: relative;
   width: 50%;
-  background-image: url('../img/canada-photo-bg.jpg');
+  background-image: url('../img/europe-photo-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
