--- a/study-summer/home/app/sass/blocks/ireland.scss
+++ b/study-summer/home/app/sass/blocks/ireland.scss
@@ -1,27 +1,27 @@
-.canada {
+.ireland {
   display: flex;
   height: 100vh;
 }
 
-.canada__column {
+.ireland__column {
   display: flex;
   flex-direction: column;
   width: 50%;
   
-  &--left {
-    background-image: url('../img/canada-left-bg.jpg');
+  &--right {
+    background-image: url('../img/ireland-right-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 }
 
-.canada__row {
+.ireland__row {
   flex-grow: 1;
   
   &--top {
     position: relative;
-    background-image: url('../img/canada-row-top-bg.jpg');
+    background-image: url('../img/ireland-row-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -30,7 +30,7 @@
       content: '';
       position: absolute;
       top: 0;
-      left: -3px;
+      right: -3px;
       width: 8px;
       height: 100%;
       background-image: url('../img/svg/country-arrow.svg');
@@ -45,23 +45,26 @@
   }
 }
 
-.canada__content {
+.ireland__content {
   position: relative;
   box-sizing: border-box;
   padding-top: 50px;
-  padding-right: 110px;
+  padding-right: 20px;
   padding-bottom: 50px;
   padding-left: 60px;
   background-color: #FFFFFF;
 }
 
-.canada__subtitle {
+.ireland__subtitle {
   position: absolute;
   top: -30px;
   left: 50%;
   width: 375px;
   margin: 0;
-  padding: 10px 30px;
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 30px;
   color: $blue;
   font-size: 25px;
   font-weight: 400;
@@ -77,7 +80,7 @@
   }
 }
 
-.canada__title {
+.ireland__title {
   margin-top: 0;
   margin-bottom: 30px;
   color: $text;
@@ -85,21 +88,25 @@
   font-weight: 900;
 }
 
-.canada__list {
+.ireland__list {
   margin-top: 0;
   margin-bottom: 30px;
   padding-left: 15px;
   list-style-image: url('../img/svg/li.svg');
 }
 
-.canada__item {
+.ireland__item {
   margin-bottom: 15px;
   color: $text;
   font-size: 18px;
   font-weight: 400;
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
-.canada__link {
+.ireland__link {
   padding-right: 45px;
   color: $red;
   font-size: 16px;
@@ -117,10 +124,10 @@
   }
 }
 
-.canada__video {
+.ireland__video {
   position: relative;
   width: 50%;
-  background-image: url('../img/canada-video-bg.jpg');
+  background-image: url('../img/ireland-video-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -129,7 +136,7 @@
     content: '';
     position: absolute;
     top: 0;
-    left: -3px;
+    right: -3px;
     width: 8px;
     height: 100%;
     background-image: url('../img/svg/country-arrow.svg');
@@ -141,7 +148,7 @@
   }
 }
 
-.canada__play {
+.ireland__play {
   position: absolute;
   top: 0;
   left: 0;
@@ -163,10 +170,10 @@
   }
 }
 
-.canada__photo {
+.ireland__photo {
   position: relative;
   width: 50%;
-  background-image: url('../img/canada-photo-bg.jpg');
+  background-image: url('../img/ireland-photo-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -175,7 +182,7 @@
     content: '';
     position: absolute;
     top: 0;
-    left: -3px;
+    right: -3px;
     width: 8px;
     height: 100%;
     background-image: url('../img/svg/country-arrow.svg');
