add simple preloader

--- a/study-summer/home/app/sass/style.scss
+++ b/study-summer/home/app/sass/style.scss
@@ -3,6 +3,8 @@
 @import 'global/base';
 @import 'global/fonts';
 
+@import 'blocks/preloader';
+
 @import 'blocks/aside';
 @import 'blocks/title';
 @import 'blocks/header';
