--- a/study-summer/home/app/sass/blocks/profit.scss
+++ b/study-summer/home/app/sass/blocks/profit.scss
@@ -29,18 +29,69 @@
 }
 
 .profit__list {
-  // width: 750px;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .profit__item {
+  position: relative;
   margin-bottom: 30px;
   padding-left: 125px;
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 85px;
   
-  &:last-child {
+  &::before {
+    content: '';
+    position: absolute;
+    top: -20px;
+    left: 0;
+    color: #FFFFFF;
+    font-size: 45px;
+    font-weight: 900;
+    opacity: 0.4;
+  }
+  
+  &:nth-child(1) {
+    background-image: url('../img/svg/profit-1.svg');
+    
+    &::before {
+      content: '1';
+    }
+  }
+  
+  &:nth-child(2) {
+    background-image: url('../img/svg/profit-2.svg');
+    
+    &::before {
+      content: '2';
+    }
+  }
+  
+  &:nth-child(3) {
+    background-image: url('../img/svg/profit-3.svg');
+    
+    &::before {
+      content: '3';
+    }
+  }
+  
+  &:nth-child(4) {
+    background-image: url('../img/svg/profit-4.svg');
+    
+    &::before {
+      content: '4';
+    }
+  }
+  
+  &:nth-child(5) {
     margin-bottom: 0;
+    background-image: url('../img/svg/profit-5.svg');
+    
+    &::before {
+      content: '5';
+    }
   }
 }
 
